# kraftwerk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  JOURNEY.md  LICENSE-MIT  README.md  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/examples/: round_i_integration.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: boot.rs  char_devices.rs  connection.rs  console.rs  controllers.rs  cpu_tune.rs  disks.rs  display.rs  domain.rs  domain_caps.rs  filesystem.rs  host.rs  hostdev.rs  image_catalog.rs  launch_security.rs  migration.rs  mod.rs  network.rs  nics.rs  ovf_import.rs  snapshots.rs  spice.rs  storage.rs  templates.rs  virtio.rs  vm_creation.rs  vnc.rs
src-tauri/src/libvirt/: backing_chain.rs  boot_config.rs  char_devices.rs  clone.rs  connection.rs  console.rs  controller_config.rs  cpu_tune_config.rs  disk_config.rs  display_config.rs  domain_builder.rs  domain_caps.rs  domain_config.rs  domain_stats.rs  events.rs  filesystem_config.rs  host_info.rs  hostdev.rs  image_catalog.rs  launch_security.rs  memory_hotplug.rs  migration.rs  mod.rs  nested_virt.rs  network_config.rs  nic_config.rs  ovf_import.rs  qemu_log.rs  secrets.rs  snapshots.rs  spice_proxy.rs  ssh_known_hosts.rs  storage_config.rs  templates.rs  test_helpers.rs  virtio_devices.rs  (+3 more)
src-tauri/tests/: integration_jolyne.rs  integration_memory.rs  integration_phase3.rs  integration_phase4.rs  integration_phase5.rs  integration_phase6.rs  integration_testhost.rs  integration_vcpus.rs
(+57 files in other folders)
