[package]
name = "kraftwerk"
version = "0.1.19"
description = "Cross-platform virtual machine manager using libvirt"
authors = ["Nicolas Bousquet"]
edition = "2021"

[lib]
name = "kraftwerk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
virt = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
quick-xml = "0.37"
regex = "1"
libc = "0.2"
tokio = { version = "1", features = ["sync", "net", "rt-multi-thread", "io-util", "macros"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
capsaicin-client = { git = "https://github.com/calibrae/capsaicin.git", rev = "079eac7" }
base64 = "0.22"
dirs = "6.0.0"
virt-sys = "0.3.1"

[dev-dependencies]
mockall = "0.13"
